--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
     color: white;
     background-color:  #ffa64d ;
     position: fixed;
+    z-index: 10;
     top: 0;
     width: 100%;
 }
@@ -28,4 +29,15 @@
 }
 #m2{
     font-family: 'Fredoka One';
+}
+.selection_form{
+    height: 1000px;
+    width: auto;
+    margin: 5%;
+    border :1px solid  #666666; 
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 30px;
+}
+.selection_form h3{
+    font-family: 'Anton';
 }
