starting topping js

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,12 +31,13 @@
     font-family: 'Fredoka One';
 }
 .selection_form{
-    height: 1000px;
+    height: auto;
     width: auto;
     margin: 5%;
     border :1px solid  #666666; 
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding: 30px;
+    padding-bottom: 100px;
 }
 .selection_form h3{
     font-family: 'Anton';
