--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,9 @@
     height: 250px;
     width: auto;
     background-image: url(../images/pizzabg3.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 .moto{
     height: auto;
